--- a/ThaiTechEventsCalendar/Views/Cells/EventCollectionViewCell.xib
+++ b/ThaiTechEventsCalendar/Views/Cells/EventCollectionViewCell.xib
@@ -23,7 +23,7 @@
                     <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ud3-mN-9oQ" userLabel="DateContainer">
                         <rect key="frame" x="0.0" y="0.0" width="88" height="180"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="FEB 27 ~ FEB 28" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m6A-s2-ZCO">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="FEB 27 ~ FEB 28" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumFontSize="15" translatesAutoresizingMaskIntoConstraints="NO" id="m6A-s2-ZCO">
                                 <rect key="frame" x="8" y="8" width="80" height="42.5"/>
                                 <constraints>
                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="25" id="Dt0-kR-gh7"/>
