--- a/ThaiTechEventsCalendar/Base.lproj/Main.storyboard
+++ b/ThaiTechEventsCalendar/Base.lproj/Main.storyboard
@@ -58,6 +58,7 @@
                     <connections>
                         <outlet property="feedTableView" destination="jFj-pC-CuC" id="ySz-Xp-hYU"/>
                         <segue destination="Phq-dR-upj" kind="custom" identifier="eventDetail" customClass="DeckSegue" customModule="DeckTransition" id="DId-1n-Vks"/>
+                        <segue destination="Phq-dR-upj" kind="show" identifier="seg" id="xdn-EE-TdP"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Jqe-Yz-JKN" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -73,10 +74,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="1FX-xR-BOv">
-                                <rect key="frame" x="0.5" y="20" width="375" height="647"/>
+                                <rect key="frame" x="0.5" y="64" width="375" height="603"/>
                                 <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="detailCell" id="Fah-jb-Bm7" customClass="DetailTableViewCell" customModule="ThaiTechEventsCalendar" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="detailCell" rowHeight="44" id="Fah-jb-Bm7" customClass="DetailTableViewCell" customModule="ThaiTechEventsCalendar" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="55.5" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" restorationIdentifier="detailCell" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Fah-jb-Bm7" id="fAV-vb-tJo">
@@ -91,22 +92,19 @@
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fge-MS-ge1">
-                                                    <rect key="frame" x="40" y="7" width="320" height="30"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="lgl-xM-FLc"/>
-                                                    </constraints>
+                                                    <rect key="frame" x="40" y="11" width="320" height="23"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                             <constraints>
+                                                <constraint firstAttribute="bottom" secondItem="fge-MS-ge1" secondAttribute="bottom" constant="9.5" id="G4S-cU-Fh1"/>
                                                 <constraint firstItem="fge-MS-ge1" firstAttribute="leading" secondItem="4G9-Hm-dnZ" secondAttribute="trailing" constant="8" id="GZu-Mx-puM"/>
                                                 <constraint firstAttribute="trailing" secondItem="fge-MS-ge1" secondAttribute="trailing" constant="15" id="LzT-J9-exI"/>
-                                                <constraint firstItem="4G9-Hm-dnZ" firstAttribute="centerY" secondItem="fAV-vb-tJo" secondAttribute="centerY" id="Ni4-eB-SLN"/>
-                                                <constraint firstItem="fge-MS-ge1" firstAttribute="top" secondItem="fAV-vb-tJo" secondAttribute="top" constant="7" id="PRE-g9-t0z"/>
-                                                <constraint firstItem="fge-MS-ge1" firstAttribute="centerY" secondItem="fAV-vb-tJo" secondAttribute="centerY" id="UGz-Ya-Ves"/>
+                                                <constraint firstItem="fge-MS-ge1" firstAttribute="top" secondItem="fAV-vb-tJo" secondAttribute="top" constant="11" id="QTZ-3h-qv2"/>
                                                 <constraint firstItem="4G9-Hm-dnZ" firstAttribute="leading" secondItem="fAV-vb-tJo" secondAttribute="leading" constant="8" id="d5v-Gl-a2r"/>
+                                                <constraint firstItem="4G9-Hm-dnZ" firstAttribute="top" secondItem="fAV-vb-tJo" secondAttribute="top" constant="10" id="q35-8J-iVJ"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
@@ -133,24 +131,17 @@
                                                     <rect key="frame" x="15" y="16" width="5" height="8"/>
                                                     <color key="backgroundColor" red="0.87013977766036987" green="0.88223451375961304" blue="0.89462554454803467" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="height" relation="greaterThanOrEqual" id="6nq-7K-K4s"/>
                                                         <constraint firstAttribute="width" constant="5" id="oXt-VC-YbL"/>
                                                     </constraints>
                                                 </view>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aPc-VN-3I2">
                                                     <rect key="frame" x="36" y="20" width="324" height="0.0"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" relation="greaterThanOrEqual" id="U6v-rF-7Mz"/>
-                                                    </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" red="0.41450494527816772" green="0.45037573575973511" blue="0.49202084541320801" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="249" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="F62-KM-iB4">
                                                     <rect key="frame" x="15" y="36" width="345" height="47.5"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="21" id="ods-hN-6A7"/>
-                                                    </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -199,10 +190,13 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ed7-3g-fGo" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="823" y="770"/>
+            <point key="canvasLocation" x="821.60000000000002" y="769.56521739130437"/>
         </scene>
     </scenes>
     <resources>
         <image name="calendar" width="37" height="37"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="xdn-EE-TdP"/>
+    </inferredMetricsTieBreakers>
 </document>
